toList in EdeltaDerivedStateHelper